--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express": "~4.9.0",
+    "express": "^4.9.8",
     "express-partials": "^0.3.0",
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
