--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://lhgbionkslppkf:viSBYV0aG5toVlSuZUt1tQoxPH@ec2-54-83-205-164.compute-1.amazonaws.com:5432/d11erb07me641l
+DATABASE_URL=sqlite://:@:/
 DATABASE_STORAGE=quiz.sqlite
 PASSWORD_ENCRYPTION_KEY=asdfghjklzxcvbnmqwertyuiop
